tests/diagnostics/naming/keywords/reserved_word/expect.txt
# exit: 1
input/main.coppice:1:10: error: reserved keyword 'mut' cannot be used as an identifier
  function mut() -> int64 {
           ^
